Add custom target and module variant support (Module.<target>.hx)
Teach the plugin the compiler's target-specific file convention: a
String.go.hx declares module String and shadows a plain String.hx
when its variant is the active platform.

- Naming is unconditional (stubs/indexes are app-wide): variant files
  always yield base-module names; STUB_VERSION 140, BASE_INDEX_VERSION 139
- Activation is define-driven and shares CC's define source: stock
  platform-name defines plus the target.name value; a custom target
  synthesizes custom_target + target.name (hxml --custom-target and the
  container's new Custom target setting)
- One selection ladder (active variant > plain > inactive) in
  selectVisibleCandidate, the package-model file lookup and the package
  module list
- Custom target UI: tree row under IDE environment below Define
  overrides, plus a field in the Configure Environment dialog

Also:
- Tool window remembers expanded rows across IDE restarts
  (HaxeToolWindowUiState in the workspace file, like Maven/Gradle)
- Test define injection is a typed Map (DEFINES_KEY); the comma DSL
  moved to the HaxeTestDefines test helper

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>